# bootstrap-stat

./: CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  main.yml
bootstrap-stat/: datasets.py
bootstrap-stat/data/: hormone_data.csv
bootstrap_stat/: __init__.py  _utils.py  bias.py  bootstrap_stat.py  confidence.py  datasets.py  distributions.py  prediction.py  sampling.py  significance.py  standard_error.py
bootstrap_stat/data/: law_school.csv  patch.csv  rainfall.csv  spatial_test.csv
docs/: code.rst  conf.py  index.rst
docs/_build/html/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
tests/: context.py  test_bootstrap_stat.py
