[project]
name = "bootstrap-stat"
version = "0.2.4.2"
description = "Bootstrap method for standard errors, confidence intervals, and more!"
authors = [{ name = "Bob Wilson", email = "bob@convexanalytics.com" }]
readme = "README.md"
license = "Apache-2.0"
keywords = ["statistics", "nonparametric", "machine learning"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.17",
    "scipy>=1.3",
    "pandas>=0.25.1",
    "pathos>=0.2.5",
]

[project.urls]
Documentation = "https://www.convexanalytics.com/bootstrap-stat/index.html"
Repository = "https://github.com/rwilson4/bootstrap-stat"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "statsmodels>=0.14",
    "sphinx>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bootstrap_stat"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
