[project]
name = "bootstrap-stat"
version = "0.2.4.2"
description = "Bootstrap method for standard errors, confidence intervals, and more!"
authors = [{ name = "Bob Wilson", email = "bob@convexanalytics.com" }]
readme = "README.md"
license = "Apache-2.0"
keywords = ["statistics", "nonparametric", "machine learning"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.17",
    "scipy>=1.3",
    "pandas>=0.25.1",
    "pathos>=0.2.5",
]

[project.urls]
Documentation = "https://www.convexanalytics.com/bootstrap-stat/index.html"
Repository = "https://github.com/rwilson4/bootstrap-stat"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "statsmodels>=0.14",
    "sphinx>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bootstrap_stat"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "SIM108", # ternary operator - prefer explicit if/else per style guide
    "SIM105", # contextlib.suppress - prefer explicit try/except
    "SIM101", # multiple isinstance - prefer explicit checks
    "B007",   # unused loop variable - common pattern in numerical code
    "B905",   # zip strict - not always needed
    "B028",   # stacklevel in warnings - not critical
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
# Gradual typing: ignore missing imports and some error categories
# as we incrementally add type hints to the codebase
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
